Fix menu position when collapsed.

--- a/mapaguarani/static/sass/_sidebar.scss
+++ b/mapaguarani/static/sass/_sidebar.scss
@@ -129,10 +129,6 @@
               width: 100%;
             }
           }
-          input,
-          select,
-          select option {
-          }
         }
       }
       ul.content-list {
@@ -316,7 +312,7 @@
   pointer-events: auto;
   text-align: center;
   width: 40px;
-  top: 200px;
+  top: 220px;
   left: 322px;
   z-index: 1999;
   transition: left 1s ease;
